--- a/asteroidwebgpu.vcxproj
+++ b/asteroidwebgpu.vcxproj
@@ -175,6 +175,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="app.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="mesh.cpp" />
     <ClCompile Include="simplexnoise1234.c" />
